@@ -10,6 +10,8 @@ enum _eZWaveDeviceType
 	ZDTYPE_SWITCHNORMAL = 0,
 	ZDTYPE_SWITCHDIMMER,
 	ZDTYPE_SENSOR_POWER,
+	ZDTYPE_SENSOR_TEMPERATURE,
+	ZDTYPE_SENSOR_HUMIDITY
 };
 
 class CRazberry : public CDomoticzHardwareBase
